Login Page and Splash screen added

--- a/health-hustle/app.json
+++ b/health-hustle/app.json
@@ -7,9 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/HHLogo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#09022C"
     },
     "assetBundlePatterns": [
       "**/*"
