--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -17,7 +17,8 @@
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
-    "react-native-navigation": "^7.33.1"
+    "react-native-navigation": "^7.33.1",
+    "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
