--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.18.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -19,10 +20,13 @@
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-gesture-handler": "^2.10.1",
     "react-native-navigation": "^7.33.1",
     "react-native-paper": "^5.8.0",
+    "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.3",
+    "react-native-screens": "^3.20.0",
     "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
