--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -20,10 +20,12 @@
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-navigation": "^7.33.1",
     "react-native-paper": "^5.8.0",
     "react-native-parallax-scroll-view": "^0.21.3",
+    "react-native-popover-view": "^5.1.7",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "^4.5.3",
     "react-native-screens": "^3.20.0",
