--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -15,11 +15,13 @@
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "@react-navigation/stack": "^6.3.16",
+    "date-fns": "^2.30.0",
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-calendars": "^1.1298.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "^2.10.1",
     "react-native-navigation": "^7.33.1",
