--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -25,6 +25,7 @@
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-calendars": "^1.1298.0",
+    "react-native-confetti": "^0.1.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
