--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -21,6 +21,7 @@
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
     "firebase": "^9.22.1",
+    "patch-package": "^7.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -34,6 +35,7 @@
     "react-native-paper": "^5.8.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-popover-view": "^5.1.7",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
