--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -40,11 +40,14 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-share": "^9.2.0",
     "react-native-vector-icons": "^9.2.0",
+    "react-native-view-shot": "^3.7.0",
     "react-native-webview": "11.26.0",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2",
-    "react-youtube": "^10.1.0"
+    "react-youtube": "^10.1.0",
+    "expo-sharing": "~11.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
