--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -35,12 +35,10 @@
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.9.0",
-    "react-native-navigation": "^7.33.1",
     "react-native-new-snap-carousel": "^3.9.3",
     "react-native-paper": "^5.8.0",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-popover-view": "^5.1.7",
-    "react-native-progress-circle": "^2.1.0",
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
@@ -48,7 +46,7 @@
     "react-native-share": "^9.2.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-view-shot": "^3.7.0",
+    "react-native-view-shot": "3.5.0",
     "react-native-webview": "11.26.0",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2",
