--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -21,7 +21,6 @@
     "deprecated-react-native-prop-types": "^4.1.0",
     "expo": "~48.0.15",
     "expo-notifications": "^0.20.1",
-    "expo-permissions": "^14.2.1",
     "expo-sensors": "~12.1.1",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
@@ -35,6 +34,7 @@
     "react-native-confetti": "^0.1.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-elements": "^3.4.3",
+    "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-new-snap-carousel": "^3.9.3",
     "react-native-paper": "^5.8.0",
@@ -44,7 +44,6 @@
     "react-native-reanimated": "~2.14.4",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-share": "^9.2.0",
     "react-native-svg": "13.4.0",
     "react-native-vector-icons": "^9.2.0",
     "react-native-view-shot": "3.5.0",
