--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -20,7 +20,7 @@
     "date-fns": "^2.30.0",
     "deprecated-react-native-prop-types": "^4.1.0",
     "expo": "~48.0.15",
-    "expo-notifications": "^0.20.1",
+    "expo-notifications": "~0.18.1",
     "expo-sensors": "~12.1.1",
     "expo-sharing": "~11.2.2",
     "expo-status-bar": "~1.4.4",
