--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -29,11 +29,13 @@
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.8",
+    "react-native-appearance": "^0.3.4",
     "react-native-calendars": "^1.1298.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-confetti": "^0.1.0",
     "react-native-confetti-cannon": "^1.5.2",
     "react-native-elements": "^3.4.3",
+    "react-native-event-listeners": "^1.0.7",
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-new-snap-carousel": "^3.9.3",
@@ -50,7 +52,8 @@
     "react-native-webview": "11.26.0",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2",
-    "react-youtube": "^10.1.0"
+    "react-youtube": "^10.1.0",
+    "styled-components": "^6.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
