--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -9,6 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@pchmn/expo-material3-theme": "^1.3.1",
     "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-community/netinfo": "9.3.7",
@@ -19,6 +20,7 @@
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
     "deprecated-react-native-prop-types": "^4.1.0",
+    "eas-cli": "^3.17.1",
     "expo": "~48.0.15",
     "expo-notifications": "~0.18.1",
     "expo-sensors": "~12.1.1",
@@ -39,7 +41,7 @@
     "react-native-fast-image": "^8.6.3",
     "react-native-gesture-handler": "~2.9.0",
     "react-native-new-snap-carousel": "^3.9.3",
-    "react-native-paper": "^5.8.0",
+    "react-native-paper": "^5.9.1",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-popover-view": "^5.1.7",
     "react-native-push-notification": "^8.1.1",
