--- a/health-hustle/package.json
+++ b/health-hustle/package.json
@@ -10,9 +10,9 @@
   },
   "dependencies": {
     "@pchmn/expo-material3-theme": "^1.3.1",
-    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-native-async-storage/async-storage": "1.18.2",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-community/netinfo": "9.3.7",
+    "@react-native-community/netinfo": "9.3.10",
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
@@ -21,17 +21,16 @@
     "date-fns": "^2.30.0",
     "deprecated-react-native-prop-types": "^4.1.0",
     "eas-cli": "^3.17.1",
-    "expo": "~48.0.15",
-    "expo-notifications": "~0.18.1",
-    "expo-sensors": "~12.1.1",
-    "expo-sharing": "~11.2.2",
-    "expo-status-bar": "~1.4.4",
+    "expo": "^49.0.0",
+    "expo-notifications": "~0.20.1",
+    "expo-sensors": "~12.3.0",
+    "expo-sharing": "~11.5.0",
+    "expo-status-bar": "~1.6.0",
     "firebase": "^9.22.1",
     "patch-package": "^7.0.0",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.71.8",
-    "react-native-appearance": "^0.3.4",
+    "react-native": "0.72.3",
     "react-native-calendars": "^1.1298.0",
     "react-native-circular-progress-indicator": "^4.4.2",
     "react-native-confetti": "^0.1.0",
@@ -39,19 +38,19 @@
     "react-native-elements": "^3.4.3",
     "react-native-event-listeners": "^1.0.7",
     "react-native-fast-image": "^8.6.3",
-    "react-native-gesture-handler": "~2.9.0",
+    "react-native-gesture-handler": "~2.12.0",
     "react-native-new-snap-carousel": "^3.9.3",
     "react-native-paper": "^5.9.1",
     "react-native-parallax-scroll-view": "^0.21.3",
     "react-native-popover-view": "^5.1.7",
     "react-native-push-notification": "^8.1.1",
-    "react-native-reanimated": "~2.14.4",
-    "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "^3.20.0",
-    "react-native-svg": "13.4.0",
+    "react-native-reanimated": "~3.3.0",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-svg": "13.9.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-view-shot": "3.5.0",
-    "react-native-webview": "11.26.0",
+    "react-native-view-shot": "3.7.0",
+    "react-native-webview": "13.2.2",
     "react-native-youtube": "^2.0.2",
     "react-native-youtube-iframe": "^2.2.2",
     "react-youtube": "^10.1.0",
